# stassh

./: CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: auto-tag.yml  release.yml
crates/backend/: Cargo.toml
crates/backend/sql/: 001_init.sql  002_deleted_show_debug_panel.sql  003_add_ssh_fullscreen.sql  004_host_group.sql
crates/backend/src/: config.rs  db.rs  db_crypto.rs  lib.rs  migrations.rs  screen.rs  sql_migrations.rs  update.rs  version.rs
crates/tui/: Cargo.toml  ascii-art-lg.txt  ascii-art-md.txt  ascii-art-sm.txt  ascii-art-xs.txt  ascii-art.txt
crates/tui/src/: app.rs  inputs.rs  main.rs  navigation.rs  ssh_client.rs  telemetry.rs
crates/tui/src/screens/: asking_passphrase.rs  dashboard.rs  mod.rs  onboarding_wants_encryption.rs  onboarding_wants_passphrase.rs  onboarding_wants_telemetry.rs  ssh_session.rs  startup_update.rs
crates/tui/src/screens/components/: logo.rs  mod.rs  page_with_logo.rs  paragraph_with_note.rs
crates/tui/src/screens/dashboard/: mod.rs
crates/tui/src/screens/dashboard/pages/: credits.rs  debug.rs  home.rs  mod.rs  settings.rs  ssh.rs
crates/tui/src/ui/: buttons.rs  layout.rs  mod.rs  text.rs  theme.rs
