[package]
name = "backend"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
rand = "0.10.0"
num_enum = "0.7.6"
semver = "1.0"
ureq = { version = "3.3.0", features = ["json"] }
sha2 = "0.11.0"
tar = "0.4.45"
flate2 = "1.1.5"
self-replace = "1.5.0"
