[package]
name = "stassh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
backend = { version = "0.1.0", path = "../backend" }
base64 = "0.22.1"
crossterm = "0.29.0"
ratatui = "0.30.0"
russh = "0.60.0"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "rt-multi-thread", "time"] }
vt100 = "0.16.2"
